<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="commrhardman23.httpsgithub.contactbook.AddContactInfo">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/edtxtName"
        android:layout_marginTop="58dp"
        android:width="300sp"
        android:visibility="visible"
        android:hint="@string/name_prompt"
        android:textIsSelectable="false"
        android:textSize="@dimen/contact_prompt_size"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/edtxtPhone"
        android:layout_alignEnd="@+id/edtxtPhone" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/edtxtPhone"
        android:hint="@string/phone_prompt"
        android:textSize="14sp"
        android:layout_marginTop="18dp"
        android:layout_below="@+id/edtxtName"
        android:width="400sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="center_horizontal" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/edtxtEmail"
        android:layout_marginTop="20dp"
        android:hint="@string/email_prompt"
        android:textSize="@dimen/contact_prompt_size"
        android:gravity="center_horizontal"
        android:layout_below="@+id/edtxtPhone"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/edtxtPhone"
        android:layout_alignEnd="@+id/edtxtPhone" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_button_text"
        android:id="@+id/btnAdd"
        android:layout_below="@+id/edtxtEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:onClick="addContact" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_button_text"
        android:id="@+id/btnBeginSearchActivity"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/btnAdd"
        android:layout_centerHorizontal="true"
        android:onClick="displaySearchActivity" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtvwError"
        android:layout_marginTop="31dp"
        android:textSize="@dimen/contact_prompt_size"
        android:textColor="#000000"
        android:width="300sp"
        android:layout_below="@+id/btnBeginSearchActivity"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal" />
</RelativeLayout>
